--- a/backend/package.json
+++ b/backend/package.json
@@ -1,25 +1,28 @@
 {
-  "name": "paris-tennis-booker",
-  "version": "1.0.50",
-  "scripts": {
-    "dev": "bun --watch src/index.ts",
-    "build": "bun build src/index.ts --outdir ./dist",
-    "start": "NODE_ENV=production bun src/index.ts",
-    "test": "bun test"
-  },
-  "dependencies": {
-    "@elysiajs/cors": "^0.8.0",
-    "@elysiajs/cron": "^0.8.0",
-    "@elysiajs/swagger": "^0.8.5",
-    "chalk": "^5.3.0",
-    "dayjs": "latest",
-    "elysia": "latest",
-    "puppeteer": "latest"
-  },
-  "devDependencies": {
-    "bun-types": "latest",
-    "prettier": "^3.2.5"
-  },
-  "module": "src/index.js",
-  "license": "MIT"
+    "name": "paris-tennis-booker",
+    "version": "1.0.50",
+    "scripts": {
+        "dev": "bun --watch src/index.ts",
+        "build": "bun build src/index.ts --outdir ./dist",
+        "start": "NODE_ENV=production bun src/index.ts",
+        "test": "bun test",
+        "init-data": "bun run prisma/seed-bookings.ts"
+    },
+    "dependencies": {
+        "@elysiajs/cors": "^0.8.0",
+        "@elysiajs/cron": "^0.8.0",
+        "@elysiajs/swagger": "^0.8.5",
+        "@prisma/client": "^5.11.0",
+        "chalk": "^5.3.0",
+        "dayjs": "latest",
+        "elysia": "latest",
+        "puppeteer": "latest"
+    },
+    "devDependencies": {
+        "bun-types": "latest",
+        "prettier": "^3.2.5",
+        "prisma": "^5.11.0"
+    },
+    "module": "src/index.js",
+    "license": "MIT"
 }
