--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,23 +1,35 @@
 {
+    "name": "frontend",
     "private": true,
+    "version": "0.0.0",
     "type": "module",
     "scripts": {
         "dev": "vite",
-        "build": "vite build",
+        "build": "tsc && vite build",
+        "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
         "preview": "vite preview"
     },
     "dependencies": {
-        "preact": "^10.13.1",
-        "preact-router": "^4.1.2"
+        "grommet": "^2.36.1",
+        "grommet-icons": "^4.12.1",
+        "localforage": "^1.10.0",
+        "match-sorter": "^6.3.4",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-router-dom": "^6.22.3",
+        "sort-by": "^1.2.0",
+        "styled-components": "^5.3.11"
     },
     "devDependencies": {
-        "@preact/preset-vite": "^2.5.0",
+        "@types/react": "^18.2.66",
+        "@types/react-dom": "^18.2.22",
+        "@typescript-eslint/eslint-plugin": "^7.2.0",
+        "@typescript-eslint/parser": "^7.2.0",
+        "@vitejs/plugin-react": "^4.2.1",
         "eslint": "^8.57.0",
-        "eslint-config-preact": "^1.3.0",
-        "typescript": "^5.4.2",
-        "vite": "^4.3.2"
-    },
-    "eslintConfig": {
-        "extends": "preact"
+        "eslint-plugin-react-hooks": "^4.6.0",
+        "eslint-plugin-react-refresh": "^0.4.6",
+        "typescript": "^5.2.2",
+        "vite": "^5.2.0"
     }
 }
