--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,5 +1,8 @@
 node_modules
+
 # Keep environment variables out of version control
-.env
+.env.development
+.env.production
+
 # Production folder
 dist
